Fixed Navigation with transparency on scroll (#132)
* minimally working fixed nav on homepage

* fixed nav on all pages

* proper top margin on all pages

* fix margin on photography page

* Naming

* handle z-index

* animate navigation on photoswipe open/close

* avoid logo text stacking in lg size

* mobile menu height must be full height now since it can be shown after scrolling

when scrolled down on ios, the button bars hide, so min-h-screen changes to be larger

* comment

* Add offset on  on nav

* no need to move nav so far off screen anymore

* scroll-padding

--- a/app/javascript/stylesheets/photography.sass
+++ b/app/javascript/stylesheets/photography.sass
@@ -1,6 +1,12 @@
 // ------
 // layout
 // ------
+.pswp
+    // set z-index of photoswipe container smaller than the z-index of
+    // site's fixed header navigation. then add/remove z-index class from header via
+    // javascript in custom.js for smoother transition/from gallery
+    z-index: 25
+
 .photography-template
   #main
     // required for safari (macOS and iOS) to prevent horizontal scrolling
